# class-interference

./: .pylintrc  README.md  pyproject.toml  tox.ini
src/class_interference/: __init__.py  extension.py
tests/: test_extensions.py
